--- a/src/pages/cotizaciones.astro
+++ b/src/pages/cotizaciones.astro
@@ -33,7 +33,7 @@ try {
   <body>
     <Layout client:load currentPath="/cotizaciones">
       <QueryProvider client:only="react">
-        <CotizacionesPage client:load />
+        <CotizacionesPage client:only="react" />
       </QueryProvider>
     </Layout>
   </body>
