--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -5,7 +5,7 @@
  */
 import Layout from '../components/Layout';
 import QueryProvider from '../components/QueryProvider';
-import DashboardPage from '../components/DashboardPage';
+import DashboardContent from '../components/DashboardContent';
 import { obtenerUsuarioActual } from '../services/auth.service';
 
 // Verificar autenticación
@@ -33,7 +33,7 @@ try {
   <body>
     <Layout client:load currentPath="/dashboard">
       <QueryProvider client:load>
-        <DashboardPage client:load />
+        <DashboardContent client:only="react" />
       </QueryProvider>
     </Layout>
   </body>
